タブ/スマホ利用時のTOPのロゴを変更

--- a/config/locales/ya.yml
+++ b/config/locales/ya.yml
@@ -1,6 +1,7 @@
 ja:
   defaults:
     eigoemon: "はつめい屋 英語えもん"
+    mobile_eigoemon: "え"
     login: "ログイン"
     here_to_login: "ログインはこちら"
     logout: "ログアウト"
