--- a/config/locales/ya.yml
+++ b/config/locales/ya.yml
@@ -1,7 +1,7 @@
 ja:
   defaults:
     eigoemon: "はつめい屋 英語えもん"
-    mobile_eigoemon: "え"
+    emon: "えもん"
     login: "ログイン"
     here_to_login: "ログインはこちら"
     logout: "ログアウト"
