モーダル内にユーザーレベルの変数を追加/パーシャルをローカル変数に修正

--- a/config/locales/ya.yml
+++ b/config/locales/ya.yml
@@ -72,7 +72,7 @@ ja:
     repeat: "くり返す"
   modal:
     prologue: "プロローグ"
-    congratulations: "おめでとう！ユーザーレベルがあがったよ！"
+    congratulations: "おめでとう！レベル%{level}になったよ！"
     notice: "（※1日で上げられるユーザーレベルは最大で2つまでだよ）"
     epilogue: "エピローグ"
 
