--- a/config/locales/ya.yml
+++ b/config/locales/ya.yml
@@ -75,6 +75,7 @@ ja:
     congratulations: "おめでとう！レベル%{level}になったよ！"
     notice: "（※1日で上げられるユーザーレベルは最大で2つまでだよ）"
     epilogue: "エピローグ"
+    screenshot: "スクショたいむ"
 
 
 
