--- a/config/locales/ya.yml
+++ b/config/locales/ya.yml
@@ -47,7 +47,7 @@ ja:
     start_quiz: "レベルあげ（もんだい）"
     memories: "おもいで"
     noted_words: "メモした単語"
-    review_quizzes: "復習問題"
+    review_quizzes: "復習もんだい"
     share: "Xでシェア"
     next_quiz: "もう1問！"
     unnote: "メモやめる"
