--- a/config/locales/ya.yml
+++ b/config/locales/ya.yml
@@ -30,7 +30,7 @@ ja:
     next: "つぎへ"
     not_have_access_rights: "アクセス権限がありません。"
   favorites:
-    not_found: "メモ登録された単語がありません。"
+    not_found: "単語が見つかりません。"
   tutorials:
     title: "おためし"
     quiz: "もんだい（3問）"
