不正なクイズidが入力された場合の例外処理を追加

--- a/config/locales/ya.yml
+++ b/config/locales/ya.yml
@@ -85,6 +85,8 @@ ja:
     notice: "（1日最大で2つぶんレベル上げができるよ。レベルに関わらず もんだいはいくらでも解けるよ）"
     epilogue: "エピローグ"
     screenshot: "スクショたいむ"
+  alert:
+    next_quiz: "良い感じのクイズを自動で出題するよ！"
 
 
 
